--- a/debug/index.html
+++ b/debug/index.html
@@ -18,51 +18,14 @@
 <script src='../debug/access_token_generated.js'></script>
 <script>
 
-// var map = window.map = new mapboxgl.Map({
-//     container: 'map',
-//     zoom: 12.5,
-//     center: [-77.01866, 38.888],
-//     style: 'mapbox://styles/mapbox/streets-v10',
-//     hash: true
-// });
-
 var map = window.map = new mapboxgl.Map({
     container: 'map',
-    zoom: 18,
-    center: [5.80706959702, 45.21808941904],
+    zoom: 12.5,
+    center: [-77.01866, 38.888],
     style: 'mapbox://styles/mapbox/streets-v10',
     hash: true
 });
 
-map.on('load', function() {
-    loadMaps(map, [
-        'inria.geojson'
-    ], 'indoor-style.json');
-});
-
-let lastGeojson;
-function loadMaps(map, mapsPaths, layersPath) {
-    fetch(layersPath)
-        .then(res => res.json())
-        .then(layers => {
-            mapsPaths.forEach(mapPath => {
-                fetch(mapPath)
-                    .then(res => res.json())
-                    .then(geojson => {
-                        map.addIndoorMap(geojson, layers);
-                        lastGeojson = geojson;
-                    });
-            });
-        });
-}
-
-map.addControl(new mapboxgl.IndoorControl());
-map.addControl(new mapboxgl.GeolocateControl({
-    positionOptions: {
-        enableHighAccuracy: true
-    },
-    trackUserLocation: true
-}));
 </script>
 </body>
 </html>
