Added beforeLayerId for indoor style

--- a/debug/indoor.html
+++ b/debug/indoor.html
@@ -42,7 +42,7 @@ function loadMaps(map, mapsPaths, layersPath) {
             mapsPaths.forEach(mapPath => {
                 fetch(mapPath)
                     .then(res => res.json())
-                    .then(geojson =>  map.addIndoorMap(geojson, layers));
+                    .then(geojson =>  map.addIndoorMap(geojson, layers, 'housenum-label'));
             });
         });
 }
