--- a/debug/indoor.html
+++ b/debug/indoor.html
@@ -31,20 +31,15 @@ let layers;
 map.on('load', function() {
     loadMaps(map, [
         'inria.geojson'
-    ], 'indoor-style.json');
+    ]);
 });
 
-function loadMaps(map, mapsPaths, layersPath) {
-    return fetch(layersPath)
-        .then(res => res.json())
-        .then(_layers => {
-            layers = _layers;
-            mapsPaths.forEach(mapPath => {
-                fetch(mapPath)
-                    .then(res => res.json())
-                    .then(geojson =>  map.addIndoorMap(geojson, layers, 'housenum-label'));
-            });
-        });
+function loadMaps(map, mapsPaths) {
+    mapsPaths.forEach(mapPath => {
+        fetch(mapPath)
+            .then(res => res.json())
+            .then(geojson => map.indoor.addMap(geojson, null, 'housenum-label'));
+    });
 }
 
 map.addControl(new mapboxgl.GeolocateControl({
